# eval-runner

./: README.md  evaluate.py  ground_truth.json.gpg  index.html  pyproject.toml  rate_limit.py  score.py  scores.json  validate_predictions.py
.github/workflows/: evaluate.yml
